--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Lets Do Some Javascript Fun!!</h1>
-    <script src="./experiment.js"></script>
+    <script src="./primitive.js"></script>
 </body>
 </html>
