--- a/dom.html
+++ b/dom.html
@@ -8,7 +8,8 @@
     <title>Lets learn Dom!!</title>
 </head>
 <body>
-    <div class="red-square"></div> 
-    <script src="scope.js"></script>
+    <div class="redsquare"></div> 
+    <div class="redsquare"></div> 
+    <script src="script.js"></script>
 </body>
 </html>
