--- a/dom.html
+++ b/dom.html
@@ -10,6 +10,10 @@
 <body>
     <div class="redsquare"></div> 
     <div class="redsquare"></div> 
+    <div class="greensquare"></div> 
+    <div class="greensquare"></div> 
+    <div class="greenquare"></div> 
+    <div class="greensquare"></div> 
     <script src="script.js"></script>
 </body>
 </html>
