modify with DOM

--- a/dom.html
+++ b/dom.html
@@ -12,8 +12,16 @@
     <div class="redsquare"></div> 
     <div class="greensquare"></div> 
     <div class="greensquare"></div> 
-    <div class="greenquare"></div> 
     <div class="greensquare"></div> 
+    <div id="yellowsquare"></div> 
+    <ul>
+        <li class="js-target">Unchanged</li>
+        <li class="js-target">Unchanged</li>
+        <li>Won't Change</li>
+        <li class="js-target">Unchanged</li>
+        <li>Won't Change</li>
+        <li class="js-target">Unchanged</li>
+      </ul>
     <script src="script.js"></script>
 </body>
 </html>
