--- a/dom.html
+++ b/dom.html
@@ -22,6 +22,9 @@
         <li>Won't Change</li>
         <li class="js-target">Unchanged</li>
       </ul>
+      <button class="event-button">Click me!</button> 
+      <input placeholder="type into me!" class="input-to-copy" />
+      <p class="p-to-copy-to">Nothing has happened yet.</p>
     <script src="script.js"></script>
 </body>
 </html>
