--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,9 @@
     <p id="first">First Paragraph</p>
     <p id="second">Second Paragraph</p>
     <p id="third">Third Paragraph</p>
+    <button>First button</button>
+      <button class="red">Second button (with a class)</button>
+      <p class="red">I have the same class as the above button! </p>
     <script src="script2.js"></script>
 </body>
 </html>
